ported donate page and fixed some minor layout issues

--- a/Eclipse update site/WebContent/css/theme.css
+++ b/Eclipse update site/WebContent/css/theme.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Open Sans', serif;
+
+  padding-top: 70px;
+  padding-bottom: 30px;
 }
 
 .navbar {
@@ -15,6 +18,16 @@ body {
 }
 
 .jumbotron {
+  margin-top: -50px;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
+.theme-dropdown .dropdown-menu {
+  position: static;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.theme-showcase > p > .btn {
+  margin: 5px 0;
+}
